# GravitySim

./: .gitignore  CMakeLists.txt
inc/: Particle.hpp  Window.hpp
src/: Particle.cpp  Window.cpp  main.cpp
